added github link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#" target="_blank">Mojtaba Mehrzad</a>.
+      Coded by <a href="https://github.com/mojtaba-mehrzad" target="_blank">Mojtaba Mehrzad</a>.
     </div>
   </footer>
   <script src="https://kit.fontawesome.com/439c3c12a4.js" crossorigin="anonymous"></script>
