--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p class="card-profile-date">28 Jun 2020</p>
           </div>
           <div class="card-social-section">
-            <button class="card-social-btn" id="share-btn"><i class="fa-solid fa-share" style="color: #6E8098;"></i></button>
+            <button class="card-social-btn" id="share-btn"><span id="none">none</span><i class="fa-solid fa-share" style="color: #6E8098;"></i></button>
             <div class="card-social-links" id="links-section">
               <p class="card-social-link-text">SHARE</p>
               <a href="#" target="_blank" class="card-social-link-icon"><img src="./assets/images/icon-facebook.svg" alt=""></a>
